--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,9 @@
 
   <title>borla_client</title>
   <link rel="manifest" href="manifest.json">
-
+  <script
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6UDM8O3wlMa5SNLHfcM8MGEFJ3ejc55U&libraries=drawing,visualization,places">
+  </script>
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
