--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
   <title>borla_client</title>
   <link rel="manifest" href="manifest.json">
   <script
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6UDM8O3wlMa5SNLHfcM8MGEFJ3ejc55U">
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6UDM8O3wlMa5SNLHfcM8MGEFJ3ejc55U&libraries=places">
   </script>
   <script>
     // The value below is injected by flutter build, do not touch.
